--- a/views/layout.erb
+++ b/views/layout.erb
@@ -31,16 +31,8 @@
 
 <div class="container">
   <div class="sixteen columns">
-    <h1>Aw Yea</h1>
-    <div class="row">
-      <div class="twelve columns alpha">
-        <input type="text" id="query" />
-      </div>
-      <div class="four columns omega">
-        <input type="button" value="Show Me The Money" id="go" />
-      </div>
-    </div>
-  <div>
+    <%= yield %>
+  </div>
 </div><!-- container -->
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
