--- a/views/index.erb
+++ b/views/index.erb
@@ -1,14 +1,20 @@
-<h1>Aw Yea</h1>
+<br>
 <div class="row">
-  <div id="notice" class="sixteen columns" style="display: none">
-    <p></p>
+  <div id="notice" class="sixteen columns">
+    <p style="height: 1em"><span></span></p>
   </div>
 </div>
+
+<h1>Aw Yea</h1>
 <div class="row">
   <div class="twelve columns alpha">
     <input type="text" id="query" />
   </div>
   <div class="four columns omega">
     <input type="button" value="Show Me The Money" id="go" />
+  </div>
+</div>
+<div class="row">
+  <div id="result" class="sixteen columns alpha omega">
   </div>
 </div>
