--- a/views/index.erb
+++ b/views/index.erb
@@ -5,7 +5,7 @@
   </div>
 </div>
 
-<h1>Aw Yea</h1>
+<h1>Feed Me</h1>
 <div class="row">
   <div class="twelve columns alpha">
     <input type="text" id="query" />
