config for heroku

--- a/views/index.erb
+++ b/views/index.erb
@@ -5,7 +5,10 @@
   </div>
 </div>
 
+<div class="row">
 <h1>Feed Me</h1>
+<p>Some song lyrics and I'll give you some youtube videos that probably match the song</p>
+</div>
 <div class="row">
   <div class="twelve columns alpha">
     <input type="text" id="query" />
