--- a/views/index.erb
+++ b/views/index.erb
@@ -18,6 +18,7 @@
   </div>
 </div>
 <div class="row">
+  <div style="text-align: center"><img id="spinner" src="img/spinner.gif" /></div>
   <div id="result" class="sixteen columns alpha omega">
   </div>
 </div>
