--- a/views/search_result.erb
+++ b/views/search_result.erb
@@ -1,8 +1,5 @@
 <div>
 <% @links.each do |link| %>
-  <% link = link[:youtube] %>
-  <% if link %>
-  <iframe width="420" height="315" src="http://www.youtube.com/embed/<%=link[:href]%>" frameborder="0" allowfullscreen></iframe>
-  <% end %>
+  <iframe width="420" height="315" src="http://www.youtube.com/embed/<%=link%>" frameborder="0" allowfullscreen></iframe>
 <% end %>
 </div>
