--- a/views/index.erb
+++ b/views/index.erb
@@ -21,6 +21,8 @@
 <div class="row">
   <div style="text-align: center"><img id="spinner" src="img/spinner.gif" /></div>
   <div id="result" class="sixteen columns alpha omega">
+</div>
+
   </div>
 </div>
 
