--- a/views/search_result.erb
+++ b/views/search_result.erb
@@ -1,5 +1,9 @@
 <div>
 <% @links.each do |link| %>
-  <iframe width="420" height="315" src="http://www.youtube.com/embed/<%=link%>" frameborder="0" allowfullscreen></iframe>
+  <div class="grid">
+    <span class="title"><%= link[:title]%></span>
+    <iframe width="420" height="315" src="http://www.youtube.com/embed/<%=link[:id]%>" frameborder="0" allowfullscreen></iframe>
+  </div>
 <% end %>
 </div>
+
